--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -1,5 +1,21 @@
-.create-button {
+.deskstop-create-button {
   position: fixed;
   top: 100px;
   right: 100px;
+}
+@media only screen and (max-width: 600px) {
+  .deskstop-create-button {
+    position: fixed;
+  }
+  .deskstop-create-button button {
+    position: fixed;
+    bottom: 50px;
+    right: 30px;
+  }
+}
+
+.menu-button {
+  position: fixed;
+  top: 120px;
+  right: 20px;
 }
